# octo-infra-aws-python

./: .gitignore  LICENSE.txt  Makefile  Pipfile  README.md  setup.cfg  setup.py
.github/workflows/: build.yml
octo_infra_aws_python/logic/: ami.py  ec2.py  network.py  s3.py  service_discovery.py  ssm.py  sts.py
octo_infra_aws_python/models/: find_asset.py  network_rule.py  regions.py  service_instance.py
octo_infra_aws_python/models/actions/ami/: __init__.py  find_image.py
octo_infra_aws_python/models/actions/ec2/: __init__.py  create_ec2.py  create_key_pair.py  destroy_ec2.py  destroy_key_pair.py  find_ec2_instance_password.py
octo_infra_aws_python/models/actions/network/: __init__.py  create_internet_gateway.py  create_security_group.py  create_subnet.py  create_vpc.py  destroy_internet_gateway.py  destroy_security_group.py  destroy_subnet.py  destroy_vpc.py
octo_infra_aws_python/models/actions/s3/: __init__.py  delete_objects.py  download_object.py  find_objects.py  load_object.py  object_exists.py  object_info.py  save_object.py  upload_object.py
octo_infra_aws_python/models/actions/service_discovery/: __init__.py  find_service_instance.py
octo_infra_aws_python/models/actions/ssm/: __init__.py  create_ssm_parameter.py  destroy_ssm_parameter.py  find_ssm_parameter.py
tests/unit/: test_octo.py
